# application/controllers/IndexController.go
@@ -47,6 +47,14 @@ func Indexpage(c *gin.Context) {
 		},
 	})
 }
+
+// @Summary 获取首页信息
+// @Description 描述信息
+// @Tags index
+// @Accept  json
+// @Produce  json
+// @Header 200 {string} token Request.Header
+// @Router /getIndex [get]
 func Index(c *gin.Context) {
 
 	//日志记录示例
@@ -65,15 +73,15 @@ func Index(c *gin.Context) {
 		color.Danger.Println("失败了")
 	}
 	//查询用户组及该组的功能权限
-	user , ok := userContext.(models.QyUser) //这个是类型推断,判断接口是什么类型
-	color.Danger.Println(user,"类型")
+	user, ok := userContext.(models.QyUser) //这个是类型推断,判断接口是什么类型
+	color.Danger.Println(user, "getIndex获取用户信息")
 	if ok {
 		color.Danger.Println("是按比例")
 		color.Danger.Println(ok)
-	}else {
+	} else {
 		color.Danger.Println("断言失败")
 	}
-color.Danger.Println(user.Username,"获取用")
+	color.Danger.Println(user.Username, "获取用")
 	gid := models.GetUserGroup(user.Uid)
 	var menu []models.Allmenu
 	if gid == 1 {
